remove PackList interface